# bash-skill

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/bash-skill/: SKILL.md
docs/: plan.md
scripts/: install.sh
src/: __init__.py
src/bash_skill/: __init__.py  command_executor.py  output_parser.py  platform_detector.py  server.py
tests/: __init__.py  test_command_executor.py  test_output_parser.py  test_platform_detector.py  test_server.py
